[gd_scene load_steps=7 format=3 uid="uid://dak1ea1jhs040"]

[ext_resource type="Script" path="res://scene/instruction/InputOutput/ClearInstruction.gd" id="1_av53m"]
[ext_resource type="PackedScene" uid="uid://l3lvpw0vs5vw" path="res://scene/instruction/Base/BaseRow.tscn" id="2_ra7af"]
[ext_resource type="PackedScene" uid="uid://pnn0iyl5fuil" path="res://scene/instruction/Base/BaseLine.tscn" id="3_x0g6d"]
[ext_resource type="Script" path="res://scene/instruction/Base/ColorLabel.gd" id="4_3kw72"]
[ext_resource type="PackedScene" uid="uid://bnxr1d310gk3l" path="res://scene/instruction/Base/BaseLineColor.tscn" id="5_4mj7c"]
[ext_resource type="PackedScene" uid="uid://cxkqo32fuxva3" path="res://scene/instruction/Base/TextInput.tscn" id="6_yidkm"]

[node name="ClearInstruction" type="Panel"]
script = ExtResource("1_av53m")

[node name="BaseRow" parent="." instance=ExtResource("2_ra7af")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 1
grow_vertical = 1

[node name="BaseLine" parent="BaseRow" instance=ExtResource("3_x0g6d")]

[node name="ColorLabel" type="Label" parent="BaseRow/BaseLine"]
offset_right = 40.0
offset_bottom = 23.0
text = "Draw"
script = ExtResource("4_3kw72")

[node name="BaseLineColor" parent="BaseRow" instance=ExtResource("5_4mj7c")]

[node name="Label" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "Clear        r"

[node name="TextInput" parent="BaseRow/BaseLineColor" instance=ExtResource("6_yidkm")]

[node name="Label2" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "g"

[node name="TextInput2" parent="BaseRow/BaseLineColor" instance=ExtResource("6_yidkm")]

[node name="Label3" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "b"

[node name="TextInput3" parent="BaseRow/BaseLineColor" instance=ExtResource("6_yidkm")]
